--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Travel Destinations</h1>
+        <h1>Welcome to Travel Destinations In Lesotho</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
