--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             <h2><a href="https://destination3.com">Liphoofung cave</a></h2>
         </div>
     </section>
+
+    <h2>YOU ARE WELCOME TO VISIT LESOTHO TO COME AND EXPLORE THE BEAUTY WE HAVE AS A COUNTRY</h2>
     
     <footer>
         <p>&copy; 2024 Travel Destinations</p>
