--- a/destinations.html
+++ b/destinations.html
@@ -21,7 +21,7 @@
         <div class="destination">
             <img src="katse dam.jpeg" width="600px" alt="Destination 1">  <video src="VID-20241009-WA0012.mp4" controls>your browser does not support this file</video>
             <h2><a href="https://destination1.com">Katse Dam</a></h2>
-            <p>Katse Dam, located in the Mohales Hoek District of Lesotho, is one of the most spectacular places to visit in the country. Situated between two mountain ranges, the dam is a stunning sight to behold. It is the second largest dam in Africa and provides the perfect backdrop for a variety of activities. Whether you’re looking for adventure or relaxation, there’s something for everyone at Katse Dam. Here are 10 things to do when you visit this incredible location.</p>
+            <p>Katse Dam, located in the Mohales Hoek District of Lesotho, is one of the most spectacular places to visit in the country. Situated between two mountain ranges, the dam is a stunning sight to behold. It is the second largest dam in Africa and provides the perfect backdrop for a variety of activities. Whether you’re looking for adventure or relaxation, there’s something for everyone at Katse Dam.</p>
         </div>
         <div class="destination">
             <img src="maletsunyane water fall.jpg" width="600" alt="Destination 2"><video src="maletsunyane video.mp4" width="500" height="400"  controls>your browser doe not support this file</video>
