--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
         <section class="contact-form">
             <form action="#" method="post">
             <label for="message">Message:</label>
-            <textarea id="message" name="message" required></textarea>
+            <textarea id="message" rows="4" name="message" required></textarea>
 
             <button type="submit">Send Message</button>
         </form>
