--- a/destinations.html
+++ b/destinations.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Travel Destinations</h1>
+        <h1>Our Featured Destinations</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -17,7 +17,7 @@
         </nav>
     </header>
 
-    <section class="destinations">
+    <section class="grid">
         <div class="destination">
             <img src="katse dam.jpeg" width="600px" alt="Destination 1">  <video src="VID-20241009-WA0012.mp4" controls>your browser does not support this file</video>
             <h2><a href="https://destination1.com">Katse Dam</a></h2>
