--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <section class="carousel">
         <div class="carousel-item">
-            <img src="katse dam.jpeg" width="600px" alt="Destination 1">
+            <img src="katse dam.jpeg" alt="Destination 1">
             <h2><a href="https://destination1.com">Katse Dam</a></h2>
         </div>
         <div class="carousel-item">
