--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
             <h2><a href="https://destination2.com">Mohale Dam</a></h2>
         </div>
         <div class="carousel-item">
-            <img src="7719436a.jpg" alt="destination3">
+            <img src="7719436a.jpg" alt="destination 3">
             <h2><a href="https://destination3.com">Liphoofung cave</a></h2>
         </div>
+        <img src="afriski.jpg" alt="destination 4">
+        <h2><a href="https://destination 4.com">Afriski</h2>
     </section>
 
     <h2>YOU ARE WELCOME TO VISIT LESOTHO TO COME AND EXPLORE THE BEAUTY WE HAVE AS A COUNTRY</h2>
