--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
     <section>
         <h2>Our Story</h2>
-        <p>We provide information about places of destination which people will travel too or visit  to explore the beauty we have in our country example Katse Dam , Mohale Dam and Liphoofung Cave.It is our pleasure to make sure that all people knows the beauty of Lesotho from other countries.It is iportant for people from other coutries to come and visitor our country to explore the beauty we have in our country.</p>
+        <p>We provide information about places of destination which people will travel too or visit  to explore the beauty we have in our country example Katse Dam , Mohale Dam and Liphoofung Cave.It is our pleasure to make sure that all people knows the beauty of Lesotho from other countries.It is important for people from other coutries to come and visitor our country to explore the beauty we have in our country.</p>
     </section>
 
 
